# programming_ouyou_2

./: .gitignore  README.md  docker-compose.multi.yml
.devcontainer/: post-create-command.sh
actix-web-app/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
actix-web-app/src/: config.rs  db.rs  main.rs  models.rs  routes_auth.rs  routes_memo.rs  supabase_auth_middleware.rs  supabase_auth_service.rs
actix-web-app/static/: index.js  memo.html  memo.js
flask-app/: Dockerfile  docker-compose.yml
flask-app/src/: app.py  config.py  models.py  routes_auth.py  routes_memo.py  supabase_auth_filter.py  supabase_auth_service.py
flask-app/src/static/: index.html  memo.html
gin-app/: .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
gin-app/src/: config.go  models.go  routes_auth.go  routes_memo.go  supabase_auth_middleware.go  supabase_auth_service.go
gin-app/static/: memo.js  style.css
go-sample/: go.mod  main.go
next-app/: .gitignore  Dockerfile  Dockerfile.multi  docker-compose.multi.yml  docker-compose.yml  package-lock.json  package.json  proxy.ts
next-app/app/: layout.tsx  page.tsx
next-app/app/api/auth/login/: route.ts
next-app/app/api/auth/logout/: route.ts
next-app/app/api/auth/user/: route.ts
next-app/app/api/memos/: route.ts
next-app/app/memos/: page.tsx
next-app/lib/: apiFetch.ts  prisma.ts  queryErrorHandler.ts  requestUrlHelper.ts  supabaseAuthService.ts
next-app/prisma/: schema.prisma
spring-boot-app/: Dockerfile.multi  docker-compose.multi.yml
spring-boot-app/src/main/resources/: application.properties
(+13 files in other folders)
