[package]
name = "actix-web-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-web = "4.11.0"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
once_cell = "1.21.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

